--- a/index.html
+++ b/index.html
@@ -1174,11 +1174,14 @@ Uno de los aprendizajes más notables fue la habilidad para detectar señales de
                                 </a>
 
 
+                                       <a href="https://drive.google.com/file/d/13GBVLkUtrI62Nl3-Srid1pKynPCSw3sa/view" target="_blank" >
+  
                                 <div class="evidencia-item">
                                     <i class="bi bi-play-circle"></i>
-                                    <h5>Recursos Multimedia</h5>
-                                    <p>Videos educativos e infografías</p>
+                                    <h5>Pódcast</h5>
+                                    <p>Recurso multimedia</p>
                                 </div>
+                                      </a>
 
 
                                   <a href="https://drive.google.com/file/d/1vLtAFklXU3q8HBnAtexcsmHe6abIXcjC/view?usp=sharing" target="_blank" >
@@ -1190,14 +1193,19 @@ Uno de los aprendizajes más notables fue la habilidad para detectar señales de
                                 </div>
                                 </a>
 
-
-                                <div class="evidencia-item">
+                               
+   <a href="https://www.canva.com/design/DAG4oQ5cvN8/3XeR8JMBSFHZyXH_bZ9CVg/edit?utm_content=DAG4oQ5cvN8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" >
+  
+<div class="evidencia-item">
                                     <i class="bi bi-collection-play"></i>
-                                    <h5>Presentaciones</h5>
-                                    <p>Exposiciones interactivas realizadas</p>
+                                    <h5>Presentacion</h5>
+                                    <p>Importancia d los medios y recursos</p>
                                 </div>
                             </div>
                         </div>
+                    </a>
+
+                        
 
                         <div class="detail-section">
                             <h3><i class="bi bi-person-lines-fill"></i> Reflexiones del Equipo</h3>
